Fix image cutoff of bottom image on Car campaign in IE8

--- a/app/assets/stylesheets/layout/page_specific/_car_campaign.scss
+++ b/app/assets/stylesheets/layout/page_specific/_car_campaign.scss
@@ -323,6 +323,7 @@
     // IE8 overrides to make the images play nice
     .ie8 & {
       left: 0;
+      height: 700px;
       width: 575px;
     }
   }
